# pairwise-statistics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
doc/: pairwise_statistics.ipynb
src/: pairwise_statistics.py
tests/: test_aggregator.py
